--- a/images.qrc
+++ b/images.qrc
@@ -1,10 +1,11 @@
 <RCC>
     <qresource prefix="/">
-        <file>images/apple.png</file>
         <file>images/background.jpg</file>
         <file>images/blackHorse.png</file>
         <file>images/blackHorse1.png</file>
         <file>images/iconAppleHorseChess.ico</file>
         <file>images/whiteHorse.png</file>
+        <file>images/board.png</file>
+        <file>images/apple.png</file>
     </qresource>
 </RCC>
